spacing fixes

--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -88,6 +88,7 @@ p {
     width: 650px;
     text-align: center;
     height: 90vh;
+    border: 1px solid white;
 }
 
 .room-entry {
